# openschedule-api

./: .env  .env.example  .gitignore  .pylintrc  .vimspector.json  LICENSE  README.md  config.py  requirements.txt  run.py  setup.cfg
app/: __init__.py  auth.py  config.py  constants.py  exceptions.py  json.py  utils.py  validations.py
app/auth/: __init__.py  auth.py
app/common/: exc.py  utils.py
app/docs/: __init__.py  acting_specs.py  appointment_specs.py  auth_specs.py  calendar_specs.py  clinic_specs.py  patient_specs.py  professional_specs.py  responses.py  schedule_specs.py  specialty_specs.py  user_specs.py
app/helpers/: auth.py
app/middlewares/: __init__.py  auth.py
app/models/: __init__.py  acting.py  appointment.py  cliente.py  clinic.py  clinica.py  consulta.py  enums.py  horario.py  init_data.py  notification.py  patient.py  professional.py  schedule.py  specialty.py  user.py  usuario.py
app/routes/: __init__.py  acting.py  appointment.py  auth.py  calendar.py  cliente.py  clinic.py  clinica.py  consulta.py  horario.py  notification.py  patient.py  professional.py  schedule.py  specialty.py  user.py
src/: app.py
tests/: conftest.py  db.py  test_auth.py  test_cliente.py  test_clinica.py  test_consulta.py  test_horario.py  test_model.py  test_models.py  test_validations.py
tests/factory/: __init__.py  clinic_builder.py  patient_builder.py
tests/models/: test_clinic_model.py  test_patient_model.py
tests/routes/: test_clinic_routes.py  test_patient_routes.py
