[metadata]
name = consuchat-api
version = 1.0.0
url = 
license = 
maintainer = ConsuChat
maintainer_email =
description =
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires = 
    Flask

[options.extras_require]
test = 
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = app
